build: testing github configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Nextjs-Template
-sonar.projectName=Nextjs Template
+sonar.projectKey=Nextjs-Template-Github
+sonar.projectName=Nextjs Template Github
 sonar.qualitygate.wait=true
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/*.test.tsx,**/*.test.ts,**/*.stories.tsx
