--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,11 +99,10 @@ jobs:
         run: npm run test:coverage
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: sonarsource/sonarqube-scan-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        if: github.ref == 'refs/heads/main'
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   storybook:
     runs-on: ubuntu-latest
