build: added back project key property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
+sonar.projectKey=${SONAR_PROJECT_KEY}
+sonar.projectName=${SONAR_PROJECT_NAME}
 sonar.qualitygate.wait=true
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/*.test.tsx,**/*.test.ts,**/*.stories.tsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.tsconfigPath=tsconfig.json 
+sonar.typescript.tsconfigPath=tsconfig.json
