build: project name added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,4 @@
-sonar.projectKey=${SONAR_PROJECT_KEY}
-sonar.projectName=${SONAR_PROJECT_NAME}
+sonar.projectKey=Nextjs-Template-Github-2
 sonar.qualitygate.wait=true
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/*.test.tsx,**/*.test.ts,**/*.stories.tsx
